--- a/style.css
+++ b/style.css
@@ -9,18 +9,22 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+.navy{
+  color:#003478
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
 }
 
 a {
-  color: ;
+  color: blue;
   text-decoration: none;
 }
 
 a:hover {
-  color: #e82d2d;
+  color: blue;
   text-decoration: none;
 }
 
@@ -43,7 +47,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #cc1616;
+  background: #D9B382;
   width: 40px;
   height: 40px;
   transition: all 0.4s;
@@ -56,7 +60,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #e72323;
+  background: black;
   color: #fff;
 }
 
@@ -1027,11 +1031,11 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-  background: #e82d2d;
+  background: gold;
 }
 
 .pricing .featured {
-  background: #cc1616;
+  background: #38B6FF;
   box-shadow: none;
   color: #fff;
 }
@@ -1128,10 +1132,10 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #cc1616;
+  color: #003478;
   border-radius: 50%;
   padding: 8px;
-  border: 2px dotted #f5a0a0;
+  border: 2px dotted #D9B382;
 }
 
 .contact .info-box h3 {
@@ -1215,16 +1219,14 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #cc1616;
+  background: #003478;
   border: 0;
   padding: 10px 24px;
   color: #fff;
   transition: 0.4s;
 }
 
-.contact .php-email-form button[type=submit]:hover {
-  background: #e82d2d;
-}
+
 
 @keyframes animate-loading {
   0% {
@@ -1429,3 +1431,4 @@ section {
     margin: -20px 0 30px 0;
   }
 }
+
